--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   --blue: #def2f9;
-  --red: #f15e66;
+  --red: #fa3f50;
 }
 
 html {
@@ -48,7 +48,7 @@ html {
   /* grid-column-gap: 1rem; */
 }
 .fund-container {
-  background-color: white;
+  background-color: #fbfbfb;
   width: 100%;
   /* height: 40rem; */
   border-radius: 5px;
@@ -83,16 +83,20 @@ html {
   background-color: black;
   background-size: cover;
   background-repeat: no-repeat;
+  height: 100% !important;
 }
 
 .main {
-  min-height: calc(100vh - 70px);
+  /* height: 100%; */
+  height: calc(100vh - 70px);
   /* display: grid;
   place-items: center; */
   /* display: flex;
   flex-direction: column;
   justify-content: center; */
   /* background-color: var(--red); */
+  overflow-y: auto;
+  /* margin-bottom: 1rem; */
 }
 
 .invest {
@@ -137,7 +141,7 @@ html {
 
 section {
   background: var(--blue);
-  padding: 100px 0;
+  padding: 2rem 0;
 }
 
 .tab__list {
@@ -163,7 +167,7 @@ section {
   left: 0;
   height: 2px;
   width: 100%;
-  background: #19d9b4;
+  background: var(--red);
   transition: 0.2s;
   visibility: hidden;
   opacity: 0;
@@ -178,7 +182,7 @@ section {
 }
 .tab__content {
   padding: 32px;
-  background: #ffffff;
+  background: #fbfbfb;
   border-radius: 0 10px 10px;
 }
 .tab__content-item {
@@ -196,4 +200,85 @@ section {
 }
 .tab .tab .tab__content {
   padding: 0;
+}
+
+.box-container {
+  /* position: absolute; */
+  /* top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  text-align: center;
+}
+.box-container .box {
+  margin-bottom: 30px;
+  display: inline-block;
+  position: relative;
+}
+.box-container .box input {
+  padding: 5px 10px;
+  height: 45px;
+  font-size: 1em;
+  line-height: 45px;
+  border: 2px solid #ccc;
+  width: 400px;
+  outline: none;
+  background: #fff;
+  color: #a2a5a7;
+}
+.box-container .box input:focus + span {
+  width: 100%;
+  opacity: 1;
+  transform: translateX(0);
+}
+.box-container .box input:focus + span:before {
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.box-container .box input:focus + span:after {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.box-container .box input + span {
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-left: 2px solid var(--red);
+  border-right: 2px solid var(--red);
+  width: calc(100% + 100px);
+  transform: translateX(-50px);
+  height: 100%;
+  pointer-events: none;
+  opacity: 0;
+  transition-property: opacity, width;
+  transition: 0.3s ease-out;
+}
+.box-container .box input + span:before,
+.box-container .box input + span:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 25px;
+  transition-property: top, bottom;
+  transition: 0.3s ease-out;
+  height: 2px;
+  width: calc(100% - 50px);
+  background: var(--red);
+}
+.box-container .box input + span:before {
+  top: -30px;
+}
+.box-container .box input + span:after {
+  bottom: -30px;
+}
+
+.stake-btn {
+  min-width: 10rem;
+  background-color: var(--red);
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
 }
